Makefile: Rename MAKE_VERBOSE to V
To enable verbose messages form the build system use V=1 now.

--- a/Makefile.include
+++ b/Makefile.include
@@ -40,7 +40,7 @@ verbose: CXXFLAGS+=-DVERBOSE
 verbose: CFLAGS+=-DVERBOSE
 verbose: ${TARGET_ELF}
 
-ifdef MAKEVERBOSE
+ifdef V
    quiet =
    Q =
 else
