sockets: Make output from make less verbose
Suppress the enter/exit directory messages.

--- a/sockets/Makefile
+++ b/sockets/Makefile
@@ -5,15 +5,16 @@ LD  = ${CC}
 CFLAGS   = -Wall -O3 -march=native
 CXXFLAGS = ${CFLAGS}
 LDFLAGS  = ${CFLAGS}
+MKFLAGS = --no-print-directory
 LDLIBS =
 
 SOURCES = server.c
 
 all:
-	make -f Makefile.server
-	make -f Makefile.client
+	@make ${MKFLAGS} -f Makefile.server
+	@make ${MKFLAGS} -f Makefile.client
 
 clean:
-	make -f Makefile.server clean
-	make -f Makefile.client clean
+	@make ${MKFLAGS} -f Makefile.server clean
+	@make ${MKFLAGS} -f Makefile.client clean
 	rm -rf	UDSDGCLNT UDSDGSRV
