--- a/fork/Makefile
+++ b/fork/Makefile
@@ -2,7 +2,7 @@ CC  = gcc
 CXX = g++
 LD  = ${CC}
 
-CFLAGS   = -Wall -O3 -march=native -I../libfoo/include -D_FORTIFY_SOURCE=2
+CFLAGS   = -Wall -O3 -march=native -I../libfoo/include
 CXXFLAGS = ${CFLAGS}
 LDFLAGS  = ${CFLAGS} -L../libfoo/lib
 LDLIBS = -lfoo
