--- a/linkedlist/Makefile
+++ b/linkedlist/Makefile
@@ -1,7 +1,7 @@
 CC  = gcc
 CXX = g++
 LD  = ${CC}
-CFLAGS   = -Wall -O3 -march=native -D_FORTIFY_SOURCE=2 -I../libfoo/include
+CFLAGS   = -Wall -O3 -march=native -I../libfoo/include
 
 CXXFLAGS = ${CFLAGS}
 LDFLAGS  = ${CFLAGS} -L../libfoo/lib
