--- a/Makefile.include
+++ b/Makefile.include
@@ -13,7 +13,7 @@ SIZE ?= size
 STRIP ?= strip
 CFLAGS := -D_FORTIFY_SOURCE=2 -fstack-protector-strong -flto -fpie -fdiagnostics-color=auto ${CFLAGS}
 CXXFLAGS := -D_FORTIFY_SOURCE=2 -fstack-protector-strong -flto -fpie -fdiagnostics-color=auto ${CXXFLAGS}
-LDFLAGS := -pie -flto ${CFLAGS} ${LDFLAGS}
+LDFLAGS := -pie -flto -Wl,-z,relro,-z,now ${CFLAGS} ${LDFLAGS}
 
 # Determine if project is written in c or c++ by looking at the suffix of the
 # main source file
