game of life: Fix unicode output
Link against ncursesw and remove the precision specifier from cell
printing to fix broken output of unicode characters.

Signed-off-by: Sören Brinkmann <soeren.brinkmann@gmail.com>

--- a/game_of_life/Makefile
+++ b/game_of_life/Makefile
@@ -4,7 +4,7 @@ LD  = ${CC}
 
 CFLAGS   = -Wall -O3 -march=native -I../libfoo/include
 LDFLAGS  = ${CFLAGS} -L../libfoo/lib
-LDLIBS = -lncurses -lfoo
+LDLIBS = -lncursesw -lfoo
 
 SOURCES = gol.c
 
