polym: Specify C++11 standard
Avoid warnings with clang.

Signed-off-by: Sören Brinkmann <soeren.brinkmann@gmail.com>

--- a/polym/Makefile
+++ b/polym/Makefile
@@ -3,7 +3,7 @@ CXX = g++
 LD = ${CXX}
 
 CFLAGS = -Wall -O3 -march=native
-CXXFLAGS = ${CFLAGS}
+CXXFLAGS = ${CFLAGS} -std=c++11
 LDFLAGS = ${CFLAGS}
 
 SOURCES = polym.cpp
